@@ -38,6 +38,6 @@ Suggests:
     testthat
 LazyData: yes
 ByteCompile: yes
-Version: 1.2
-Date: 2016-01-22
+Version: 1.3
+Date: 2016-02-06
 RoxygenNote: 5.0.1
